# perfer

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: cli.rs
