[package]
name = "perfer"
authors = ["Væñgír"]
version = "0.1.1"
description = "A CLI tool which let's you track the memory used by a program."
edition = "2021"
repository = "https://github.com/Vaengir-Projects/perfer.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["cargo"] }
clap_complete = "4.5.1"
colored = "2.1.0"
wait4 = "0.1.3"
